--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                     <h2>ACM MM 2025 Grand Challenge</h2>
                     <p class="tagline">Advancing the frontiers of identity-preserving generative video models</p>
                     <div class="hero-buttons">
-                        <a href="#datasets" class="btn primary-btn">Access Dataset</a>
+                        <a href="https://forms.gle/tGiqW54gnH2KVSZ86" class="btn primary-btn" target="_blank">Register <span style="font-size: 0.8em;">(Google form)</span></a>
+                        <a href="#datasets" class="btn secondary-btn">Access Dataset</a>
                         <a href="#submission" class="btn secondary-btn">Submit Results</a>
                     </div>
                 </div>
