--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h2>ACM MM 2025 Grand Challenge</h2>
+                    <h2 style="white-space: nowrap;">ACM Multimedia 2025 Grand Challenge</h2>
                     <p class="tagline">Advancing the frontiers of identity-preserving generative video models</p>
                     <div class="hero-buttons">
                         <a href="https://forms.gle/tGiqW54gnH2KVSZ86" class="btn primary-btn" target="_blank">Register <span style="font-size: 0.8em;">(Google form)</span></a>
