--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p class="tagline">Advancing the frontiers of identity-preserving generative video models</p>
                     <div class="hero-buttons">
                         <a href="https://forms.gle/tGiqW54gnH2KVSZ86" class="btn primary-btn" target="_blank">Register <span style="font-size: 0.8em;">(Google form)</span></a>
-                        <a href="#datasets" class="btn secondary-btn">Access Dataset</a>
+                        <!-- <a href="#datasets" class="btn secondary-btn">Access Dataset</a> -->
                         <a href="#submission" class="btn secondary-btn">Submit Results</a>
                     </div>
                 </div>
