--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
                     <p>Contestants must develop an identity-preserving video generation system based on the VIP-200K dataset. For evaluation, systems must generate at least one video per <identity images, prompt> pair in the test set.</p>
                 </div>
             </section>
-            
             <section id="datasets" class="content-section">
                 <div class="section-header">
                     <h2><i class="fas fa-database"></i> Datasets</h2>
@@ -142,10 +141,10 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <p style="color: red; font-weight: bold; font-size: 1.2em; margin-top: 15px; text-align: center;">To access the dataset, please register via this <a href="https://forms.gle/tGiqW54gnH2KVSZ86" style="color: red; text-decoration: underline;">form</a></p>
                     </div>
                 </div>
             </section>
-            
             <section id="submission" class="content-section">
                 <div class="section-header">
                     <h2><i class="fas fa-upload"></i> Submission Format</h2>
