--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
         <div class="nav-container">
             <ul>
                 <li><a href="#overview">Challenge Overview</a></li>
-                <li><a href="#task">Task Description</a></li>
+                <li><a href="#task">Task</a></li>
                 <li><a href="#datasets">Datasets</a></li>
                 <li><a href="#submission">Submission Format</a></li>
                 <li><a href="#evaluation">Evaluation</a></li>
                 <li><a href="#participation">Participation</a></li>
                 <li><a href="#timeline">Timeline</a></li>
                 <li><a href="#paper">Paper Submission</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -281,7 +282,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-content">
-                <div class="footer-section contact">
+                <div id="contact" class="footer-section contact">
                     <h4>Contact Us</h4>
                     <p><i class="fas fa-envelope"></i> panyw.ustc@gmail.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> ACM Multimedia 2025</p>
