--- a/index.html
+++ b/index.html
@@ -270,9 +270,14 @@
                     <div class="section-underline"></div>
                 </div>
                 <div class="content-box">
-                    <p>Please follow the ACM Multimedia 2025 Grand Challenge guidelines for paper submission.</p>
-                    <div class="submission-button">
-                        <a href="https://acmmm2025.org" class="btn primary-btn" target="_blank">ACM MM 2025 Guidelines <i class="fas fa-external-link-alt"></i></a>
+                    <div class="paper-submission-guidelines">
+                        <div class="paper-section">
+                            <p>We will invite the top-3 performing teams to submit a technical paper (up to 6+2 pages) via email (panyw.ustc@gmail.com), which will be peer-reviewed. The paper submission deadline is June 30, 2025. Accepted papers will be published in the conference proceedings of ACM Multimedia 2025.</p>
+                        </div>
+                        
+                        <div class="paper-section">
+                            <p>Paper format: Submitted papers (.pdf format) must use the ACM Article Template (https://www.acm.org/publications/proceedings-template). Please remember to add Concepts and Keywords. Please use the template in traditional double-column format to prepare your submissions. Please comment all the author information in your submission.</p>
+                        </div>
                     </div>
                 </div>
             </section>
