--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#overview">Challenge Overview</a></li>
                 <li><a href="#task">Task</a></li>
                 <li><a href="#datasets">Datasets</a></li>
-                <li><a href="#submission">Submission Format</a></li>
+                <li><a href="#submission">Test Submission</a></li>
                 <li><a href="#evaluation">Evaluation</a></li>
                 <li><a href="#participation">Participation</a></li>
                 <li><a href="#timeline">Timeline</a></li>
@@ -148,7 +148,7 @@
             </section>
             <section id="submission" class="content-section">
                 <div class="section-header">
-                    <h2><i class="fas fa-upload"></i> Submission Format</h2>
+                    <h2><i class="fas fa-upload"></i> Test Submission</h2>
                     <div class="section-underline"></div>
                 </div>
                 <div class="content-box">
