change submission requirement

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                         </div>
                         
                         <div class="paper-section">
-                            <p>Paper format: Submitted papers (.pdf format) must use the ACM Article Template (https://www.acm.org/publications/proceedings-template). Please remember to add Concepts and Keywords. Please use the template in traditional double-column format to prepare your submissions. Please comment all the author information in your submission.</p>
+                            <p>Paper format: Submitted papers (.pdf format) must use the ACM Article Template (https://www.acm.org/publications/proceedings-template). Please remember to add Concepts and Keywords. Please use the template in traditional double-column format to prepare your submissions. Please list all the author information in your submission.</p>
                         </div>
                     </div>
                 </div>
