--- a/index.html
+++ b/index.html
@@ -324,13 +324,13 @@
                             </div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-date">June 26, 2025</div>
+                            <div class="timeline-date"><del>June 26, 2025</del> <ins>June 28, 2025</ins></div>
                             <div class="timeline-content">
                                 <h4>Evaluation results announcement</h4>
                             </div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-date">June 30, 2025</div>
+                            <div class="timeline-date"><del>June 30, 2025</del> <ins>July 2, 2025</ins></div>
                             <div class="timeline-content">
                                 <h4>Paper submission deadline</h4>
                             </div>
@@ -347,7 +347,7 @@
                 <div class="content-box">
                     <div class="paper-submission-guidelines">
                         <div class="paper-section">
-                            <p>We will invite the top-3 performing teams to submit a technical paper (up to 6+2 pages) via email (panyw.ustc@gmail.com), which will be peer-reviewed. The paper submission deadline is June 30, 2025. Accepted papers will be published in the conference proceedings of ACM Multimedia 2025.</p>
+                            <p>We will invite the top-3 performing teams to submit a technical paper (up to 6+2 pages) via email (panyw.ustc@gmail.com), which will be peer-reviewed. The paper submission deadline is <del>June 30, 2025</del> <ins>July 2, 2025</ins>. Accepted papers will be published in the conference proceedings of ACM Multimedia 2025.</p>
                         </div>
                         
                         <div class="paper-section">
